--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "quick.db": "^7.1.2",
     "chalk": "^4.1.1",
     "moment": "^2.29.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "discord-logs": "^1.9.0"
   },
   "engines": {
     "node": "12.x"
